[gd_scene load_steps=2 format=2]

[ext_resource path="res://spawn_tester/spawn_tester.gd" type="Script" id=1]

[node name="SpawnTester" type="Node2D"]
script = ExtResource( 1 )

[node name="SpawnerBag" type="Node" parent="."]

[node name="BallBag" type="Node" parent="."]

[node name="Timer2" type="Timer" parent="."]
one_shot = true
autostart = true

[connection signal="timeout" from="Timer2" to="." method="_on_Timer_timeout"]
